404 page, routing working, z-index fixed

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -26,7 +26,7 @@
 
 html, body {
     font:15px/1.3 Arial, sans-serif;
-	z-index:1;	
+	z-index:0;	
 	overflow: hidden
 }
 
@@ -83,6 +83,7 @@ button a{
 #menu #menu-bar{
 	/* The actual menu */
 	height: 60px;
+	position: relative;
 	background-color: #000000;
 }
 
@@ -111,8 +112,9 @@ button a{
 	height: 100%;
 	background-color: #51F0B0;
 	margin: 0;
-	transition: all .3s ease-out;
+	transition: all .5s ease-out;
 	border: 2px;
+	border-color: #308f69;
 	border-style: solid;
 }
 
@@ -229,18 +231,11 @@ button a{
 	height: 0;
 }
 
-#menu #toggle-profile button.open{
-    width: 90px;
-    height: 90px;
-    transition: all .3 ease-out;
-}
-
 /* toggle buttons */
 #menu .toggle button{
 	cursor:pointer;
 	width: 40px;
 	height: 40px;
-	margin: 0px 0px;
 	margin: 5px 5px;
 	text-align:center;
 	vertical-align:middle;
@@ -255,6 +250,26 @@ button a{
 #menu #menu-profile button{
 	float: left;
 	z-index: 6;
+	transition: all .7s ease-in;
+}
+
+/*when profile is open but not button*/
+#menu #toggle-profile.open button{
+	margin-right: 200px;
+	transition: all .7s ease-in;
+}
+
+/* when the button is open but not profile */
+#menu #toggle-profile button.open{
+	margin-right: 5px;
+    width: 90px;
+    height: 90px;
+    transition: all .6s ease-in;
+}
+
+/* when both are open */
+#menu #toggle-profile.open button.open{
+	transition: all .7s ease-in;
 }
 
 /*=======================================*/
@@ -293,7 +308,7 @@ button a{
 	position: absolute;
 	z-index: 5;
 	position:fixed;
-	transition: all .28s cubic-bezier(.4,0,.2,1);
+	transition: all 2s ease-in;
 }
 
 .catch.type.hidden{
@@ -327,7 +342,6 @@ button a{
 	width: 100%;
 	height: 100%;
 	top:0;
-	z-index:-1;
 }
 
 /*=============MAP=============*/
